test/parsing/errors/sparseSubdomainActualList.compopts
--detailed-errors # sparseSubdomainActualList-detailed.good
--no-detailed-errors # sparseSubdomainActualList-brief.good
